--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,14 @@ owner: soramitsukhmer # Your GitHub organization or username, where this reposit
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Fast Development
+    url: https://web-fast-dev.sorakh.app/
+  - name: Fast Integration
+    url: https://web-fast-int.sorakh.app/
+  - name: NCS Development
+    url: https://web-ncs-dev.sorakh.app/
+  - name: NCS Integration
+    url: https://web-ncs-int.sorakh.app/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
