--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,6 +13,7 @@ sites:
     url: https://web-ncs-integration.sorakh.app/
 
 status-website:
+  apiBaseUrl: https://api.github.com
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: upptime.soramitsukhmer.com
