--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -20,7 +20,7 @@ status-website:
   # baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/soramitsukhmer/upptime/master/assets/soramitsukhmer-upptime-icon.svg
   name: Upptime — Soramitsu Khmer
-  theme: dark
+  theme: ocean
   navbar:
     - title: Status
       href: /
